[package]
name = "doc-governance"
version = "0.1.0"
edition = "2021"
authors = ["Jesen"]
description = "AI project documentation governance and OpenSpec acceleration toolkit"
license = "MIT"
repository = "https://github.com/jesenzhang/doc-governance"
readme = "README.md"
keywords = ["ai", "documentation", "openspec", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
