[package]
name = "doc-governance"
version = "0.1.0"
edition = "2021"
authors = ["Jesen Zhang"]
description = "AI project documentation governance and OpenSpec-aware artifact generator"
license = "MIT"
repository = "https://github.com/jesenzhang/doc-governance"
readme = "README.md"
keywords = ["ai", "agent", "docs", "openspec", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
camino = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
